rollout.yaml
---
apiVersion: example.com/v1
kind: Rollout
metadata:
  name: rollouts-bluegreen-demo
  labels:
    app: rollouts-demo
  annotations:
     argocd.argoproj.io/skip-health-check
spec:
  replicas: 6
        
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
        - name: rollouts-demo
          image: "alexmt/rollouts-demo:latest"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
  strategy:
     blueGreen:
       activeService: rollouts-demo
       previewService: rollouts-demo-preview
